@@ -34,3 +34,4 @@ Theo Mathieu @Mokto
 Daniel Pieper @danielpieper <monica@daniel-pieper.com>
 Andrew Paul Smith <github@chucklesthebeard.com>
 Brian Clemens <brian@tiuxo.com>
+Christopher Zentgraf @TheZenti <git@the-zenti.de>
